<resources>
    <string name="app_name">UAS</string>
    <string name="desc">Description</string>
    <string name="spec">Spesifikasi</string>
    <string name="harga">"Harga: "</string>
    <string name="type">Tipe:</string>
    <string name="machine">Mesin:</string>
    <string name="power">Tenaga:</string>
    <string name="torsi">Torsi:</string>
    <string name="title_activity_main2">Leanback Title</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>